fix fax spacings

--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,6 +1,6 @@
 .faq-container {
    width: 270px;
-   max-width: 980px;
+   max-width: 900px;
    margin: 0 auto;
    padding: 50px 0 0 0;
    position: relative;
@@ -12,6 +12,8 @@
 
 .faq-container h2 {
    font-size: 20px;
+   margin-bottom: 15px;
+   line-height: 1.2;
 }
 
 .faq-container a {
@@ -29,7 +31,7 @@
 }
 
 .single-qa {
-   border-bottom: 1px solid rgb(85,85,85);
+   border-bottom: 1px solid rgba(85,85,85,.6);
 }
 
 .question-container {
@@ -66,6 +68,7 @@
 @media screen and (min-width: 781px) {
    .faq-container {
       width: 100%;
+      margin-bottom: -20px;
    }
    .faq-container h2 {
       font-size: 24px;
@@ -76,5 +79,9 @@
       position: absolute;
       top: 50px;
       right: 0;
+   }
+   .question-container h3 {
+      font-size: 18px;
+      margin: 8px 0;
    }
 }
